--- a/mmm_match/templates/home.html
+++ b/mmm_match/templates/home.html
@@ -1,5 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-<b>"NO"</b>
+
+<div class="hero-unit">
+    <h1>
+        Welcome to MyMoneyMindsetMatch!
+    </h1>
+    <p>
+    <br>
+    Our aim is to help you find a financial advisor <i> you're</i> comfortable with, quickly and easily .
+    </p>
+    <p>
+    <a class="btn btn-primary btn-large" href="{{ NEXT_URL }}">Find An Advisor »</a>
+    </p>
+</div>
+
+
 {% endblock %}
